Fixed map keys, link wrapping

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -84,6 +84,10 @@ a, button {
 a {
   color: $link-color;
   overflow-wrap: anywhere;
+
+  &.text-nowrap {
+    overflow-wrap: normal;
+  }
 }
 
 a, button, img, input, span {
